# crisplogs

./: AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASING.md  llms.txt  pyproject.toml
.Jules/: palette.md
crisplogs/: __init__.py  colors.py  exceptions.py  formatters.py  handlers.py  types.py  utils.py
examples/: basic.py  box_styles.py  custom_colors.py  custom_date_format.py  demo.py  extra_fields.py  file_logging.py  level_filtering.py  named_loggers.py  plain_output.py
tests/: conftest.py  test_colors.py  test_formatters.py  test_handlers.py  test_setup.py  test_utils.py
