[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crisplogs"
version = "0.1.0"
description = "Beautiful, colored, and boxed logging for Python."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["colorlog>=6.0"]
keywords = ["logging", "color", "box", "formatter", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]

[project.urls]
Homepage = "https://github.com/yourusername/crisplogs"
Repository = "https://github.com/yourusername/crisplogs"
Issues = "https://github.com/yourusername/crisplogs/issues"
