[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crisplogs"
version = "0.3.0"
description = "Beautiful, colored, and boxed logging for Python."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []
keywords = ["logging", "color", "box", "formatter", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/dev22603/crisplogs"
Repository = "https://github.com/dev22603/crisplogs"
Issues = "https://github.com/dev22603/crisplogs/issues"
Changelog = "https://github.com/dev22603/crisplogs/blob/main/CHANGELOG.md"
"Release Notes" = "https://github.com/dev22603/crisplogs/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["crisplogs*"]

[tool.setuptools.package-data]
crisplogs = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
